# pyprseismic

./: LICENSE  README.md  pyproject.toml
notebooks/: 00_overview_prseismic.ipynb  01_phantom_gallery.ipynb  02_forward_models_ray_vs_fresnel.ipynb  README.md
src/pyprseimsic/: _geometry.py  _phantoms.py  _seismictomo.py  _seismicwavetomo.py  _types.py  prseismic.py
src/pyprseismic/: __init__.py  _seismictomo.py  _seismicwavetomo.py  _types.py  prseismic.py
tests/: test_geometry.py  test_phantoms.py  test_prseismic.py  test_seismictomo.py  test_seismicwavetomo.py  test_types.py
